# cubicat_ai

./: CMakeLists.txt  README.md  coredump.py  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
burn_tool/: spiffs_make_and_burn.py
main/: CMakeLists.txt  definitions.h  idf_component.yml  main.cpp  proto_socket.cpp  proto_socket.h  sounds.h  yuanti_18.c
main/audio_processing/: audio_processor.cpp  audio_processor.h
main/big_mouth_ai/: big_mouth_ai.cpp  big_mouth_ai.h  rpc_handler.cpp
main/http_client/: http_client.cpp  http_client.h
main/mcp_server/: ble_op_desc.h  mcp_server.cpp  mcp_server.h  mcp_tool.cpp  mcp_tool.h
main/rpc/: msg.pb-c.c  msg.pb-c.h
main/socket/: compress.h  socket.h  tcp_pcb_client.h  tcpsocket.cpp  tcpsocket.h  websocket.cpp  websocket.h
main/wake_detect/: wake_word_detect.cpp  wake_word_detect.h  wake_word_detect_afe.cpp  wake_word_detect_afe.h
spiffs_img/: common.js  cubicat_api.js  main.js  spine_api.js
spiffs_img/aurora/: Aurora.atlas  Aurora.skel
spiffs_img/c131/: c131_00.atlas  c131_00.skel
spiffs_img/seo_yoon/: seo_yoon.atlas  seo_yoon.skel
